# tydi

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/tydi/: __init__.py  dispatch.py  multi_dispatch.py  overload.py  register.py
src/tydi/inspectors/: __init__.py  class_inspector.py  method_inspector.py  module_inspector.py
