[tool.poetry]
name = "tydi"
version = "0.2.0"
description = "Multiple dispatch with mypy support"
authors = ["Rama Krishna Reddy Gade <you@example.com>"]
readme = "README.md"
packages = [{include = "tydi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
beartype = "^0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
